--- a/FormVer2/Views/Home/Index.cshtml
+++ b/FormVer2/Views/Home/Index.cshtml
@@ -849,8 +849,9 @@
             </div>
             <!-- /.sidebar -->
         </aside>
-
-        <footer class="main-footer fixed-bottom">
+        <!--Body-->
+        <!--/Body-->
+        <footer class="main-footer">
             <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
