--- a/FormVer2/Views/Form/CreateForm.cshtml
+++ b/FormVer2/Views/Form/CreateForm.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create form";
 }
 
-<div class="row">
+@*<div class="row">
     <div class="col-md-4">
         <form asp-action="CreateForm">
             <div class="form-group">
@@ -29,19 +29,19 @@
             </div>
         </form>
     </div>
-</div>
+</div>*@
 <!----------------------------------------------------->
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Advanced Form</h1>
+                <h1>Create Form</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Advanced Form</li>
+                    <li class="breadcrumb-item active">Create Form</li>
                 </ol>
             </div>
         </div>
@@ -53,122 +53,46 @@
     <div class="container-fluid">
         <!-- SELECT2 EXAMPLE -->
         <div class="card card-default">
-            <div class="card-header">
-                <h3 class="card-title">Select2 (Default Theme)</h3>
-
-                <div class="card-tools">
-                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                        <i class="fas fa-minus"></i>
-                    </button>
-                    <button type="button" class="btn btn-tool" data-card-widget="remove">
-                        <i class="fas fa-times"></i>
-                    </button>
-                </div>
-            </div>
-            <!-- /.card-header -->
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label>Minimal</label>
-                            <select class="form-control select2" style="width: 100%;">
-                                <option selected="selected">Alabama</option>
-                                <option>Alaska</option>
-                                <option>California</option>
-                                <option>Delaware</option>
-                                <option>Tennessee</option>
-                                <option>Texas</option>
-                                <option>Washington</option>
-                            </select>
-                        </div>
-                        <!-- /.form-group -->
-                        <div class="form-group">
-                            <label>Disabled</label>
-                            <select class="form-control select2" disabled="disabled" style="width: 100%;">
-                                <option selected="selected">Alabama</option>
-                                <option>Alaska</option>
-                                <option>California</option>
-                                <option>Delaware</option>
-                                <option>Tennessee</option>
-                                <option>Texas</option>
-                                <option>Washington</option>
-                            </select>
+                            <label asp-for="Title" class="control-label">Title</label>
+                            <input asp-for="Title" class="form-control" />
                         </div>
                         <!-- /.form-group -->
                     </div>
                     <!-- /.col -->
-                    <div class="col-md-6">
+                    <div class="col-md-2"></div>
+                    <!-- /.col -->
+                    <div class="col-md-2">
                         <div class="form-group">
-                            <label>Multiple</label>
-                            <select class="select2" multiple="multiple" data-placeholder="Select a State" style="width: 100%;">
-                                <option>Alabama</option>
-                                <option>Alaska</option>
-                                <option>California</option>
-                                <option>Delaware</option>
-                                <option>Tennessee</option>
-                                <option>Texas</option>
-                                <option>Washington</option>
-                            </select>
+                            <label asp-for="Width" class="control-label">Width</label>
+                            <input asp-for="Width" class="form-control" />
                         </div>
                         <!-- /.form-group -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-md-2">
                         <div class="form-group">
-                            <label>Disabled Result</label>
-                            <select class="form-control select2" style="width: 100%;">
-                                <option selected="selected">Alabama</option>
-                                <option>Alaska</option>
-                                <option disabled="disabled">California (disabled)</option>
-                                <option>Delaware</option>
-                                <option>Tennessee</option>
-                                <option>Texas</option>
-                                <option>Washington</option>
-                            </select>
+                            <label asp-for="Height" class="control-label">Height</label>
+                            <input asp-for="Height" class="form-control" />
                         </div>
                         <!-- /.form-group -->
                     </div>
                     <!-- /.col -->
                 </div>
-                <!-- /.row -->
-
-                <h5>Custom Color Variants</h5>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
+                    <div class="col-md-12">
                         <div class="form-group">
-                            <label>Title (.select2-danger)</label>
-                            <select class="form-control select2 select2-danger" data-dropdown-css-class="select2-danger" style="width: 100%;">
-                                <option selected="selected">Alabama</option>
-                                <option>Alaska</option>
-                                <option>California</option>
-                                <option>Delaware</option>
-                                <option>Tennessee</option>
-                                <option>Texas</option>
-                                <option>Washington</option>
-                            </select>
-                        </div>
-                        <!-- /.form-group -->
-                    </div>
-                    <!-- /.col -->
-                    <div class="col-12 col-sm-6">
-                        <div class="form-group">
-                            <label>Multiple (.select2-purple)</label>
-                            <div class="select2-purple">
-                                <select class="select2" multiple="multiple" data-placeholder="Select a State" data-dropdown-css-class="select2-purple" style="width: 100%;">
-                                    <option>Alabama</option>
-                                    <option>Alaska</option>
-                                    <option>California</option>
-                                    <option>Delaware</option>
-                                    <option>Tennessee</option>
-                                    <option>Texas</option>
-                                    <option>Washington</option>
-                                </select>
-                            </div>
+                            <label asp-for="ShortDescription" class="control-label">Description</label>
+                            <input asp-for="ShortDescription" class="form-control" />
                         </div>
                         <!-- /.form-group -->
                     </div>
                     <!-- /.col -->
                 </div>
-                <!-- /.row -->
             </div>
-            <!-- /.card-body -->
             <div class="card-footer">
                 Visit <a href="https://select2.github.io/">Select2 documentation</a> for more examples and information about
                 the plugin.
