--- a/FormVer2/Views/Form/CreateForm.cshtml
+++ b/FormVer2/Views/Form/CreateForm.cshtml
@@ -4,33 +4,6 @@
     ViewData["Title"] = "Create form";
 }
 
-@*<div class="row">
-    <div class="col-md-4">
-        <form asp-action="CreateForm">
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="ShortDescription" class="control-label"></label>
-                <input asp-for="ShortDescription" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Width" class="control-label"></label>
-                <input asp-for="Width" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Height" class="control-label"></label>
-                <input asp-for="Height" class="form-control" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-                <a asp-action="IndexForm" class="btn btn-success">Cancel</a>
-            </div>
-        </form>
-    </div>
-</div>*@
-<!----------------------------------------------------->
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <div class="container-fluid">
@@ -52,51 +25,53 @@
 <section class="content">
     <div class="container-fluid">
         <!-- SELECT2 EXAMPLE -->
-        <div class="card card-default">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label asp-for="Title" class="control-label">Title</label>
-                            <input asp-for="Title" class="form-control" />
+        <div asp-action="CreateForm" class="card card-default">
+            <form asp-action="CreateForm">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Title" class="control-label">Title</label>
+                                <input asp-for="Title" class="form-control" />
+                            </div>
+                            <!-- /.form-group -->
                         </div>
-                        <!-- /.form-group -->
-                    </div>
-                    <!-- /.col -->
-                    <div class="col-md-2"></div>
-                    <!-- /.col -->
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label asp-for="Width" class="control-label">Width</label>
-                            <input asp-for="Width" class="form-control" />
+                        <!-- /.col -->
+                        <div class="col-md-2"></div>
+                        <!-- /.col -->
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label asp-for="Width" class="control-label">Width</label>
+                                <input asp-for="Width" class="form-control" />
+                            </div>
+                            <!-- /.form-group -->
                         </div>
-                        <!-- /.form-group -->
-                    </div>
-                    <!-- /.col -->
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label asp-for="Height" class="control-label">Height</label>
-                            <input asp-for="Height" class="form-control" />
+                        <!-- /.col -->
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label asp-for="Height" class="control-label">Height</label>
+                                <input asp-for="Height" class="form-control" />
+                            </div>
+                            <!-- /.form-group -->
                         </div>
-                        <!-- /.form-group -->
+                        <!-- /.col -->
                     </div>
-                    <!-- /.col -->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label asp-for="ShortDescription" class="control-label">Description</label>
+                                <textarea id="inputDescription" asp-for="ShortDescription" class="form-control" rows="4"></textarea>
+                            </div>
+                            <!-- /.form-group -->
+                        </div>
+                        <!-- /.col -->
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label asp-for="ShortDescription" class="control-label">Description</label>
-                            <input asp-for="ShortDescription" class="form-control" />
-                        </div>
-                        <!-- /.form-group -->
-                    </div>
-                    <!-- /.col -->
+                <div class="card-footer">
+                    <a asp-action="IndexForm" class="btn btn-secondary">Cancel</a>
+                    <input type="submit" value="Create New Form" class="btn btn-success float-right" />
                 </div>
-            </div>
-            <div class="card-footer">
-                Visit <a href="https://select2.github.io/">Select2 documentation</a> for more examples and information about
-                the plugin.
-            </div>
+            </form>
         </div>
     </div>
     <!-- /.container-fluid -->
