--- a/FormVer2/Views/Shared/_Layout.cshtml
+++ b/FormVer2/Views/Shared/_Layout.cshtml
@@ -99,10 +99,10 @@
             <!-- /.content -->
         </div>
 
-        <footer class="main-footer">
+        @*<footer class="main-footer">
             <strong>Copyright &copy; 2022.</strong>
             All rights reserved.
-        </footer>
+        </footer>*@
 
         <!-- Control Sidebar -->
         <aside class="control-sidebar control-sidebar-dark">
