--- a/FormVer2/Views/Form/UpdateForm.cshtml
+++ b/FormVer2/Views/Form/UpdateForm.cshtml
@@ -9,12 +9,12 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Create Form</h1>
+                <h1>Edit Form</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Create Form</li>
+                    <li class="breadcrumb-item"><a asp-action="IndexForm">Home</a></li>
+                    <li class="breadcrumb-item active">Edit Form</li>
                 </ol>
             </div>
         </div>
@@ -25,8 +25,8 @@
 <section class="content">
     <div class="container-fluid">
         <!-- SELECT2 EXAMPLE -->
-        <div asp-action="CreateForm" class="card card-default">
-            <form asp-action="CreateForm">
+        <div class="card card-default">
+            <form asp-action="UpdateForm">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-6">
@@ -69,7 +69,7 @@
                 </div>
                 <div class="card-footer">
                     <a asp-action="IndexForm" class="btn btn-secondary">Cancel</a>
-                    <input type="submit" value="Create New Form" class="btn btn-success float-right" />
+                    <input type="submit" value="Update Form" class="btn btn-info float-right" />
                 </div>
             </form>
         </div>
@@ -77,29 +77,3 @@
     <!-- /.container-fluid -->
 </section>
 <!-- /.content -->
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="UpdateForm">
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="ShortDescription" class="control-label"></label>
-                <input asp-for="ShortDescription" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Width" class="control-label"></label>
-                <input asp-for="Width" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Height" class="control-label"></label>
-                <input asp-for="Height" class="form-control" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save changes" class="btn btn-primary" />
-                <a asp-action="IndexForm" class="btn btn-success">Cancel</a>
-            </div>
-        </form>
-    </div>
-</div>
