--- a/FormVer2/Views/FormComponent/IndexFormComponent.cshtml
+++ b/FormVer2/Views/FormComponent/IndexFormComponent.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a asp-action="IndexForm">Form</a></li>
+                    <li class="breadcrumb-item"><a asp-controller="Form" asp-action="IndexForm">Form</a></li>
                     <li class="breadcrumb-item active">Component</li>
                 </ol>
             </div>
@@ -65,7 +65,7 @@
                                 @{ if (item.FormComponent.IsRequired)
                                     {
                                         <div class="icheck-primary d-inline">
-                                            <input type="checkbox" id="checkboxPrimary1" checked>
+                                            <input type="checkbox" id="checkboxPrimary1" checked disabled>
                                             <label for="checkboxPrimary1">
                                             </label>
                                         </div>
@@ -73,7 +73,7 @@
                                     else
                                     {
                                         <div class="icheck-primary d-inline">
-                                            <input type="checkbox" id="checkboxPrimary1">
+                                            <input type="checkbox" id="checkboxPrimary1" disabled>
                                             <label for="checkboxPrimary1">
                                             </label>
                                         </div>
